<resources>
    <string name="app_name">MyQuotes</string>
    <string name="login">Login</string>
    <string name="createAccount">Create Account</string>
    <string name="name">Name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="noAccountYet">No account yet? Create one</string>
    <string name="alreadyMember">Already a member? Login</string>
    <string name="enterEmail">Enter Email Address</string>
    <string name="enterName">Enter Name</string>
    <string name="enterPassword">Enter Password</string>
    <string name="enterOldPassword">Enter Old Password</string>
    <string name="enterNewPassword">Enter New Password</string>
    <string name="enterConfirmPassword">Enter Confirm Password</string>
    <string name="enterValidEmail">Enter Valid Email</string>
    <string name="minPassword">Enter Password minimum characters of 6</string>
    <string name="successLogin">Login Successful</string>
    <string name="selectGender">Select Gender</string>
    <string name="accountCreationSuccessful">Account Creation Successful</string>
    <string name="passwordMismatch">Passwords not Matching</string>
    <string name="userAlreadyExists">Users already exists! Please change email</string>
    <string name="userNotExists">User not exists</string>
    <string name="retry">Retry</string>
    <string name="quotes">Quotes</string>
    <string name="logout">Logout</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="doYouwantLogout">Do you want to logout?</string>
    <string name="writeQuote">Write Quote</string>
    <string name="saveQuote">Save Quote</string>
    <string name="quoteAuthor">Quote Author</string>
    <string name="enterwriteQuote">Enter write quote</string>
    <string name="enterquoteAuthor">Enter quote author</string>
    <string name="addedQuotation">Quotation added successfully</string>
    <string name="editedQuotation">Quotation edited successfully</string>
    <string name="noQuotesNoted">No quotations noted</string>
    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="changePassword">Change Password</string>
    <string name="viewProfile">View Profile</string>
    <string name="passwordChangeSuccess">Password Changed Successfully</string>
    <string name="oldPasswordWrong">Old Password mismatch</string>
    <string name="oldnewPasswordsNotMatch">Old and New Passwords should not be same</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="deleteSuccess">Quote deleted successfully</string>
    <integer name="splash_time">2000</integer>
</resources>
