<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorChangePwd"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/changePwdtoolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary_darker"
        app:popupTheme="@style/AppTheme.PopupOverlay" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10p"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/editTextOldPwd"
                style="@style/CustomizeEditText"
                android:layout_width="match_parent"
                android:hint="@string/oldPassword"
                android:inputType="textPassword"
                android:textColor="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/viewLineHeight"
                android:background="@color/viewLineColor" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/editTextNewPwd"
                style="@style/CustomizeEditText"
                android:layout_width="match_parent"
                android:hint="@string/newPassword"
                android:inputType="textPassword"
                android:textColor="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/viewLineHeight"
                android:background="@color/viewLineColor" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/editTextNewConfPwd"
                style="@style/CustomizeEditText"
                android:layout_width="match_parent"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:textColor="@color/white" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnChangePwd"
            style="@style/CustomizeButton"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_20p"
            android:background="@color/primary_darker"
            android:text="@string/changePassword" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>