<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary_darker"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/_10p"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            tools:context="com.self.santoshbaratam.myquotes.CreateAccountActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/editTextName"
                    style="@style/CustomizeEditText"
                    android:layout_width="match_parent"
                    android:hint="@string/name"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/viewLineHeight"
                    android:background="@color/viewLineColor" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/editTextEmail"
                    style="@style/CustomizeEditText"
                    android:layout_width="match_parent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/viewLineHeight"
                    android:background="@color/viewLineColor" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/editTextPassword"
                    style="@style/CustomizeEditText"
                    android:layout_width="match_parent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/viewLineHeight"
                    android:background="@color/viewLineColor" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/editTextConfirmmPassword"
                    style="@style/CustomizeEditText"
                    android:layout_width="match_parent"
                    android:hint="@string/confirmPassword"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/viewLineHeight"
                    android:background="@color/viewLineColor" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spinnerGender"
                    android:layout_marginLeft="@dimen/_5p"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50dp" />

            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnCreateAccount"
                style="@style/CustomizeButton"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_20p"
                android:background="@color/primary_darker"
                android:text="@string/createAccount" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnAlreadyMember"
                style="@style/CustomizeButton"
                android:layout_width="match_parent"
                android:background="@color/transparent"
                android:text="@string/alreadyMember"
                android:textAllCaps="false"
                android:textStyle="normal" />
        </LinearLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>